fix: use correct color-scheme on dark mode

--- a/src/global.css
+++ b/src/global.css
@@ -265,12 +265,8 @@
 	}
 
 	:root {
-		color-scheme: light;
+		color-scheme: light dark;
 	}
-	:root:has(body.dark) {
-		color-scheme: dark;
-	}
-
 	body {
 		@apply bg-background font-normal text-base text-foreground relative z-1;
 	}
